<resources>
    <string name="app_name">Athena</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="upload_fragment_label">Upload</string>
    <string name="img_type">IMG</string>
    <string name="video_type">VID</string>
    <string name="hint_name">Name</string>
    <string name="hint_desc">Description</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_upload">Upload</string>
    <string name="name_empty_err">Enter name</string>
    <string name="video_success">Video is uploaded successfully.</string>
    <string name="unsuccess">There was a trouble uploading your file.</string>
    <string name="image_success">Your photo is uploaded successfully</string>
    <string name="nav_header_desc">app logo</string>
    <string name="nav_header_subtitle">User</string>
    <string name="menu_save">Saved Photos and Videos</string>
    <string name="menu_notify">Notifications</string>
    <string name="empty_text">No items found</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="SharedFragment">Shared with you</string>
    <string name="network_err">Please check your internet connection.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="email_empty">Enter email id</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_out">Sign Out</string>
    <string name="fragment_login">Athena</string>
    <string name="first_fragment">Saved Items</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_shared">Shared Items</string>
    <string name="camera">Camera</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="logout_err">Unable to log out.</string>
    <string name="saved_message">Thumbnail created</string>
</resources>