<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".upload.UploadFragment">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:max="100"
        android:progress="0"
        android:indeterminate="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/container"
        >

    <ImageView
        android:id="@+id/imageView"
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_launcher_foreground"
         />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <com.firstzoom.athena.FullScreenVideoView
        android:id="@+id/videoView"
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>
    </FrameLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Athena.TextInputLayout"

        android:id="@+id/nameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="@string/hint_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Athena.TextInputLayout"
        android:id="@+id/descLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="@string/hint_desc"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:maxLines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_margin="@dimen/margin"
        android:padding="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/descLabel"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/button_cancel"
        style="@style/Widget.Athena.Button.TextButton"
        app:layout_constraintEnd_toStartOf="@+id/upload_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_button"
        style="@style/Widget.Athena.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toTopOf="@+id/cancel_button" />




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>