<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".login.LoginFragment">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HP"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:src="@mipmap/ic_launcher"
        android:textSize="@dimen/font_xxxlarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_large"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/appLogo"
        app:layout_constraintBottom_toTopOf="@id/nameLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/primaryTextColor"
        android:text="SIGN IN"

        />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Athena.TextInputLayout"
        android:id="@+id/nameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="@string/prompt_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Athena.TextInputLayout"
        android:id="@+id/passwordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="@string/prompt_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        style="@style/Widget.Athena.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin"
        android:enabled="false"
        android:text="@string/action_sign_in_short"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintEnd_toEndOf="@+id/passwordLabel"
        app:layout_constraintStart_toStartOf="@+id/passwordLabel"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
        app:layout_constraintVertical_bias="0.4" />



</androidx.constraintlayout.widget.ConstraintLayout>